kubernetes/development/cpu_ram_count.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-commerce-coupon
  namespace: core-commerce
spec:
  template:
    spec:
      containers:
        - name: core-commerce-coupon
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
