kubernetes/development/datadog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-commerce-coupon
  namespace: core-commerce
  labels:
    tags.datadoghq.com/env: "development"
    tags.datadoghq.com/service: "core-commerce-coupon"
    tags.datadoghq.com/version: GITHUB_VERSION
spec:
  template:
    metadata:
      labels:
        tags.datadoghq.com/env: "development"
        tags.datadoghq.com/service: "core-commerce-coupon"
        tags.datadoghq.com/version: GITHUB_VERSION
    spec:
      containers:
        - name: core-commerce-coupon
